--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -3,8 +3,10 @@ name: Rust
 on:
   push:
     branches: [ master ]
+    paths: [ 'server/*' ]
   pull_request:
     branches: [ master ]
+    paths: [ 'server/*' ]
 
 env:
   CARGO_TERM_COLOR: always
@@ -16,6 +18,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - name: Lint
+      uses: actions-rs/clippy-check@v1
     - name: Build
       run: cargo build --verbose
       working-directory: server
