--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -12,10 +12,12 @@ actix-rt = "1"
 anyhow = "1"
 config = "0.10"
 juniper = "0.14"
+listenfd = { version = "0.3", optional = true }
 pretty_env_logger = "0.4"
 serde = "1"
 serde_json = "1"
 structopt = "0.3"
 
 [features]
+autoreload = ["listenfd"]
 graphiql = []
