--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -18,6 +18,7 @@ jobs:
       - uses: actions/checkout@v2
       - run: rustup component add clippy
       - uses: actions-rs/clippy-check@v1
+        working-directory: server
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           args: --all-features
