Use manifest-path to get around limitations of Github actions

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -21,7 +21,7 @@ jobs:
         working-directory: server
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          args: --all-features
+          args: --all-features --manifest-path server/Cargo.toml
   build_and_test:
     runs-on: ubuntu-latest
     steps:
