--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -20,10 +20,7 @@
       "problemMatcher": ["$rustc"],
       "label": "run development server",
       "options": {
-        "cwd": "server",
-        "env": {
-          "RUST_LOG": "info"
-        }
+        "cwd": "server"
       },
       "args": [
         "--no-pid",
