--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,7 +14,7 @@ config = "0.10"
 diesel = { version = "1.4.5", features = [ "postgres", "r2d2", "uuidv07" ]}
 dotenv = "0.15"
 fast_chemail = "0.9"
-juniper = { version = "0.14", features = [ "uuid" ]}
+juniper = "0.14"
 listenfd = { version = "0.3", optional = true }
 log = "0.4"
 postgres = "0.17"
