--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -11,11 +11,12 @@ default-run = "stacks-exchange"
 actix-web = "2"
 actix-rt = "1"
 anyhow = "1"
+async-graphql = "1.16.2"
+async-graphql-actix-web = "1.16.1"
 config = "0.10"
 diesel = { version = "1.4.5", features = [ "postgres", "r2d2", "uuidv07" ]}
 dotenv = "0.15"
 fast_chemail = "0.9"
-juniper = "0.14"
 listenfd = { version = "0.3", optional = true }
 log = "0.4"
 postgres = "0.17"
@@ -23,7 +24,7 @@ pretty_env_logger = "0.4"
 serde = "1"
 serde_json = "1"
 structopt = "0.3"
-uuid = { version = "0.7", features = [ "v4" ] }
+uuid = { version = "0.8", features = [ "v4" ] }
 
 [features]
 autoreload = ["listenfd"]
