--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -20,6 +20,7 @@ log = "0.4"
 pretty_env_logger = "0.4"
 serde = "1"
 structopt = "0.3"
+tokio-diesel = "0.3"
 uuid = { version = "0.8", features = [ "v4" ] }
 
 [features]
