--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -14,6 +14,7 @@ async-graphql = "1.16.2"
 async-graphql-actix-web = "1.16.1"
 config = "0.10"
 diesel = { version = "1.4.5", features = [ "postgres", "r2d2", "uuidv07" ]}
+diesel-derive-enum = { version = "1", features = [ "postgres" ]}
 dotenv = "0.15"
 listenfd = { version = "0.3", optional = true }
 log = "0.4"
