--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "stacks-exchange"
 version = "0.1.0"
-authors = ["David Simon <D@vidSimon.tech>"]
+authors = ["David Simon <D@vidSimon.tech>", "Vikram Shanker", "Om Kelkar"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
