--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -1,12 +1,13 @@
 [package]
 name = "stacks-exchange"
 version = "0.1.0"
-authors = ["David Simon <D@vidSimon.tech>"]
+authors = ["David Simon <D@vidSimon.tech>", "Vikram Shanker <vikram@vikramshanker.com", "Om Kelkar"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+actix-identity = "0.2.1"
 actix-web = "2"
 actix-rt = "1"
 anyhow = "1"
