--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -13,14 +13,22 @@ actix-rt = "1"
 anyhow = "1"
 async-graphql = "1.16.2"
 async-graphql-actix-web = "1.16.1"
+bytes = "^0.5"
+cache_control = "0.1.0"
 config = "0.10"
 diesel = { version = "1.4.5", features = [ "postgres", "r2d2", "uuidv07" ]}
 diesel-derive-enum = { version = "1", features = [ "postgres" ]}
 dotenv = "0.15"
+futures = "0.3.4"
+hyper = "^0.13"
+hyper-rustls = { version = "^0.19", optional = true }
+hyper-openssl = { version = "^0.8", optional = true }
+jsonwebtoken = "^7"
 listenfd = { version = "0.3", optional = true }
 log = "0.4"
 pretty_env_logger = "0.4"
-serde = "1"
+serde = { version = "1.0", features = ["derive"] }
+serde_json = "^1.0"
 structopt = "0.3"
 tokio-diesel = "0.3"
 uuid = { version = "0.8", features = [ "v4" ] }
@@ -28,3 +36,6 @@ uuid = { version = "0.8", features = [ "v4" ] }
 [features]
 autoreload = ["listenfd"]
 graphiql = []
+default = ["with-rustls"]
+with-rustls = ["hyper-rustls"]
+with-openssl = ["hyper-openssl"]
