--- a/server/conf/default.toml
+++ b/server/conf/default.toml
@@ -5,6 +5,7 @@
 listen_addr = "127.0.0.1" # Address on which the server listens. By default listen only to loopback
 listen_port = 8080 # Port on which the server listens.
 name = "localhost" # Name of the server, used for URL generation
+google_client_id = "962633347992-tbgvt8rcmnhdp5tlfm2hs1av8bkfc03n.apps.googleusercontent.com" # Google API Client ID.
 
 [db]
 application_name = "stacks_exchange" # application_name parameter provided to postgres server
