--- a/server/Cargo.toml
+++ b/server/Cargo.toml
@@ -7,12 +7,13 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-actix-identity = "0.2.1"
+actix-identity = "0.3"
 actix-web = "3.3"
 actix-rt = "1"
 anyhow = "1"
-async-graphql = "2.4"
+async-graphql = { version = "2.4", features = [ "apollo_tracing", "log", "uuid" ] }
 async-graphql-actix-web = "2.4"
+base64 = "0.13"
 bytes = "^0.5"
 cache_control = "0.1.0"
 config = "0.10"
@@ -26,11 +27,14 @@ jsonwebtoken = "^7"
 listenfd = { version = "0.3", optional = true }
 log = "0.4"
 pretty_env_logger = "0.4"
+rmp-serde = "0.15"
 serde = { version = "1.0", features = ["derive"] }
+serde_bytes = "0.11"
 serde_json = "^1.0"
 structopt = "0.3"
+thiserror = "1.0"
 tokio-diesel = "0.3"
-uuid = { version = "0.8", features = [ "v4" ] }
+uuid = { version = "0.8", features = [ "serde", "v4" ] }
 
 [features]
 autoreload = ["listenfd"]
